--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <!-- Ruangan Deskripsi -->
   <meta content="Click here" name="description">
   <meta property="og:description" content="Click here"/>
-  <meta property="og:title" content="See My Nude"/>
-  <meta name="twitter:description" content="See My Nude">
+  <meta property="og:title" content="Click here"/>
+  <meta name="twitter:description" content="Click here">
 
   <meta content="" name="keywords">
   <meta name="facebook-domain-verification" content="jdx4zsjhnulnm02hso3515emgv24r5" />
@@ -29,8 +29,8 @@
   
 
   <!-- Ruangan Redirect -->
-  <meta http-equiv="refresh" content="2; URL=https://min.afdgo.pro/click?pid=7831&offer_id=25&ref_id=Togel&sub1=Togel&sub2=Togel">
-  <link rel="canonical" href="https://min.afdgo.pro/click?pid=7831&offer_id=25&ref_id=Togel&sub1=Togel&sub2=Togel">
+  <meta http-equiv="refresh" content="2; URL=https://min.afdgo.pro/click?pid=7831&offer_id=25&ref_id=LUNATIC&sub1=LUNATIC&sub2=LUNATIC">
+  <link rel="canonical" href="https://min.afdgo.pro/click?pid=7831&offer_id=25&ref_id=LUNATIC&sub1=LUNATIC&sub2=LUNATIC">
   
 
 </head>
