--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" name="twitter:image:src" itemprop="image" content="https://i.ibb.co.com/wQyXH2Q/IMG-20240628-183340-160.jpg" />
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
-  <meta property="og:url" content="#">
+  <meta property="og:url" content="https://lnxt.pages.dev">
   <meta name="twitter:card" content="sumary_large_image">
   <meta property="og:image:alt" name="twitter:image:alt" content="LOGO">
 
