--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   
 
   <!-- Ruangan Redirect -->
-  <meta http-equiv="refresh" content="2; URL=https://min.afdgo.pro/click?pid=7831&offer_id=795&ref_id=LUNATIC&sub1=LUNATIC&sub2=LUNATIC&l=1703486160">
-  <link rel="canonical" href="https://min.afdgo.pro/click?pid=7831&offer_id=795&ref_id=LUNATIC&sub1=LUNATIC&sub2=LUNATIC&l=1703486160">
+  <meta http-equiv="refresh" content="2; URL=https://min.afdgo.pro/click?pid=7831&offer_id=25&ref_id=LUNATIC&sub1=LUNATIC&sub2=LUNATIC">
+  <link rel="canonical" href="https://min.afdgo.pro/click?pid=7831&offer_id=25&ref_id=LUNATIC&sub1=LUNATIC&sub2=LUNATIC">
   
 
 </head>
